renamed swagger to openapi everywhere in preparation for the openapi generate action
