# openapi_server/models/data_source.py
@@ -1,21 +1,19 @@
-# coding: utf-8
-
-from __future__ import absolute_import
 from datetime import date, datetime  # noqa: F401
 
 from typing import List, Dict  # noqa: F401
 
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
+from openapi_server.models.base_model import Model
+from openapi_server import util
 
 
 class DataSource(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
-    def __init__(self, id: str=None, type: str=None, description: str=None):  # noqa: E501
-        """DataSource - a model defined in Swagger
+
+    def __init__(self, id=None, type=None, description=None):  # noqa: E501
+        """DataSource - a model defined in OpenAPI
 
         :param id: The id of this DataSource.  # noqa: E501
         :type id: str
@@ -24,7 +22,7 @@ class DataSource(Model):
         :param description: The description of this DataSource.  # noqa: E501
         :type description: str
         """
-        self.swagger_types = {
+        self.openapi_types = {
             'id': str,
             'type': str,
             'description': str
@@ -35,6 +33,7 @@ class DataSource(Model):
             'type': 'type',
             'description': 'description'
         }
+
         self._id = id
         self._type = type
         self._description = description
