# openapi_server/models/indexer_configuration.py
@@ -1,24 +1,25 @@
-# coding: utf-8
-
-from __future__ import absolute_import
 from datetime import date, datetime  # noqa: F401
 
 from typing import List, Dict  # noqa: F401
 
-from swagger_server.models.base_model_ import Model
-from swagger_server.models.data_source import DataSource  # noqa: F401,E501
-from swagger_server.models.indexer import Indexer  # noqa: F401,E501
-from swagger_server.models.record import Record  # noqa: F401,E501
-from swagger_server import util
+from openapi_server.models.base_model import Model
+from openapi_server.models.data_source import DataSource
+from openapi_server.models.indexer import Indexer
+from openapi_server.models.record import Record
+from openapi_server import util
 
+from openapi_server.models.data_source import DataSource  # noqa: E501
+from openapi_server.models.indexer import Indexer  # noqa: E501
+from openapi_server.models.record import Record  # noqa: E501
 
 class IndexerConfiguration(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
-    def __init__(self, indexer: Indexer=None, data_source: DataSource=None, record: Record=None, pipeline: str=None):  # noqa: E501
-        """IndexerConfiguration - a model defined in Swagger
+
+    def __init__(self, indexer=None, data_source=None, record=None, pipeline=None):  # noqa: E501
+        """IndexerConfiguration - a model defined in OpenAPI
 
         :param indexer: The indexer of this IndexerConfiguration.  # noqa: E501
         :type indexer: Indexer
@@ -29,7 +30,7 @@ class IndexerConfiguration(Model):
         :param pipeline: The pipeline of this IndexerConfiguration.  # noqa: E501
         :type pipeline: str
         """
-        self.swagger_types = {
+        self.openapi_types = {
             'indexer': Indexer,
             'data_source': DataSource,
             'record': Record,
@@ -42,6 +43,7 @@ class IndexerConfiguration(Model):
             'record': 'record',
             'pipeline': 'pipeline'
         }
+
         self._indexer = indexer
         self._data_source = data_source
         self._record = record
