# openapi_server/models/inline_response201.py
@@ -1,32 +1,31 @@
-# coding: utf-8
-
-from __future__ import absolute_import
 from datetime import date, datetime  # noqa: F401
 
 from typing import List, Dict  # noqa: F401
 
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
+from openapi_server.models.base_model import Model
+from openapi_server import util
 
 
 class InlineResponse201(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
-    def __init__(self, job_id: str=None):  # noqa: E501
-        """InlineResponse201 - a model defined in Swagger
+
+    def __init__(self, job_id=None):  # noqa: E501
+        """InlineResponse201 - a model defined in OpenAPI
 
         :param job_id: The job_id of this InlineResponse201.  # noqa: E501
         :type job_id: str
         """
-        self.swagger_types = {
+        self.openapi_types = {
             'job_id': str
         }
 
         self.attribute_map = {
             'job_id': 'jobId'
         }
+
         self._job_id = job_id
 
     @classmethod
